[signin] Fixes to avatar icon

In the main settings page, there was no visible difference between the
"sync paused" state and sync unrecoverable errors. This CL adds the
distinction between the two.

In people handler, allow opening the Sync settings in all cases when
UnifiedConsent is enabled. Otherwise, it is not possible to reauthenticate
to fix an actionable Sync error (because the reauthentication requires
opening the sync settings, but they would instantly autoclose).

In the toolbar menu, the error was not removed on signout, because the
code was only checking for the internal sync errors and not for the
signin state.

TBR=droger@chromium.org

(cherry picked from commit 74985be34e480079b900e41268f561d737ca5498 [formerly 61ce581f8046ae32b67daa59071cb071a63a8605])

Bug: 879503
Change-Id: I247dc3ca3cbf20e49177e1343a5e4db38aeb257e
Reviewed-on: https://chromium-review.googlesource.com/1199592
Reviewed-by: Scott Chen <scottchen@chromium.org>
Reviewed-by: Thomas Tangl <tangltom@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Commit-Queue: David Roger <droger@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#588794}
Reviewed-on: https://chromium-review.googlesource.com/1213144
Reviewed-by: David Roger <droger@chromium.org>
Cr-Commit-Position: refs/branch-heads/3538@{#131}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: 6635f70afb277a975f1b5057a33ff2a85e28f9fc